<resources>
    <string name="app_name">Battery Monitor</string>
    <string name="edit_message">Enter a message:</string>
    <string name="button_send">Send</string>
    <string name="button_start_animation">Start animation</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disonnect</string>
    <string name="select_device">Select device</string>
    <string name="scanning">Scanning</string>
    <string name="ble_not_supported">Bluetooth not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="paired">Paired</string>
    <string name="start_loopback">Start loopback</string>
    <string name="stop_loopback">Stop loopback</string>
    <string name="response">Response:</string>
    <string name="battery_charge">Battery Charge</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="set_battery_capacity">Set capacity</string>
    <string name="need_location_enabled">Must have access to device\'s location</string>
</resources>
