<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/barLabel"
        android:text="@string/battery_charge"/>
    <com.moskovko.battmon.BatteryChargeView
        android:id="@+id/battery_charge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        custom:orientation="horizontal"
        custom:foregroundColor="@color/barForeground"
        custom:backgroundColor="@color/barBackground"
        custom:units="percentage"
        custom:scaledValue="100"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/barLabel"
        android:text="@string/battery_health"/>
    <com.moskovko.battmon.BatteryChargeView
        android:id="@+id/battery_health"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        custom:orientation="horizontal"
        custom:foregroundColor="@color/barForeground"
        custom:backgroundColor="@color/barBackground"
        custom:units="percentage"
        custom:scaledValue="100"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/barLabel"
        android:text="@string/battery_capacity"/>
    <com.moskovko.battmon.BatteryChargeView
        android:id="@+id/battery_capacity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        custom:orientation="horizontal"
        custom:foregroundColor="@color/barForeground"
        custom:backgroundColor="@color/barBackground"
        custom:units="amperehour"
        custom:scaledValue="1500"/>
    <!-- com.moskovko.battmon.BatteryHealthView
        android:id="@+id/battery_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:testAttr="MONKEY"/ -->
    <Button
        android:id="@+id/connect_disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:onClick="connectDisconnect"
        android:visibility="gone"/>
    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_stop_loopback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="startStopLoopback"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_data"/>
    </LinearLayout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/response"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/loopback_status"/>
</LinearLayout>